<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:padding="5dp"
	    android:orientation="vertical">
	    <EditText
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:id="@+id/username"
	        android:inputType="textEmailAddress"
	        android:hint="@string/username"
	        android:focusable="true"
	        android:paddingTop="15dp"
	    	android:paddingBottom="15dp" />
	   
	    <EditText
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:id="@+id/password"
	        android:inputType="textPassword"
	        android:hint="@string/password"
	        android:focusable="true"
	        android:paddingTop="15dp"
	    	android:paddingBottom="15dp" />
	    
	    <CheckBox android:id="@+id/show_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/show_password" 
	        android:paddingTop="15dp"
	    	android:paddingBottom="15dp"
	    	android:onClick="toggleShowPassword" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:padding="5dp"
	    style="?android:attr/buttonBarStyle">
	
	    <Button
	        android:id="@+id/no"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@android:string/cancel"
	        android:onClick="closeFragment"
	        style="?android:attr/buttonBarStyle"/>
	
	    <Button
	        android:id="@+id/yes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@android:string/ok" 
	        android:onClick="createAccount"
	        style="?android:attr/buttonBarStyle"/>
	</LinearLayout>
</RelativeLayout>
